--- a/src/views/product/productCart.ejs
+++ b/src/views/product/productCart.ejs
@@ -45,7 +45,7 @@
                 </div>
                 <button type="reset" class="reset">Eliminar</button>
             </div>
-            <article>
+            <article class="article1">
                 <div class="img">
                     <img class="article" src="images/products/img-bicicleta-fierce.jpg">
                 </div>
