--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -21,8 +21,9 @@
                             <input type="password" name="password" id="password"
                                 class="contraseñaUsuario" >
                         </div>
-                        <p class="remember">Recordar contraseña</p>
-                
+                        <div class="remember">
+                            <input type="checkbox" class="remember" name="remember">Recordar contraseña</p>
+                        </div>
 
                 <div class="botonGuardarLogin">
                     <button type="submit" class="botonFormularioLogin">INGRESAR</button>
