--- a/src/views/404/404.ejs
+++ b/src/views/404/404.ejs
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina no encontrada</title>
+    <link rel="stylesheet" href="/css/404.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/colors.css">
 </head>
+
 <body>
-    <h1>404 not found</h1>
+
+    <div class="container">
+        <img src="images/404/404.png">
+        <h1>La página que ha solicitado no se encuentra disponible</h1>
+        <div class="boton">
+            <button><a href="/">INICIO</a></button>
+        </div>
+    </div>
+
+
+
 </body>
+
 </html>
