--- a/src/views/404/404.ejs
+++ b/src/views/404/404.ejs
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina no encontrada</title>
+    <title>Error 404</title>
     <link rel="stylesheet" href="/css/404.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/icon" sizes="16x16" href="images/home/logo.svg">
     <link rel="stylesheet" href="/css/colors.css">
 </head>
 
