--- a/src/views/404/404.ejs
+++ b/src/views/404/404.ejs
@@ -17,7 +17,7 @@
 <body>
 
     <div class="container">
-        <img src="images/404/404.png">
+        <img src="/images/404/404.png">
         <h1>La página que ha solicitado no se encuentra disponible</h1>
         <div class="boton">
             <button><a href="/">INICIO</a></button>
