--- a/src/views/product/productdetail.ejs
+++ b/src/views/product/productdetail.ejs
@@ -1,69 +1,86 @@
 <%- include('../partials/head',{styles:['productdetail']}) %>
 
-<body>
-    <%- include('../partials/header') %>
-    <div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Detalle del producto: <%= product.name %></h2>
-			</div>
-		</div>
-		<div class="product-detail">
-			<div class="row">
-				<div class="col-12 col-lg-8">
-					<img src="/images/products/<%=product.image %>" alt="product image" class="product-detail-img">
-                    <html lang="en">
-                    <head>
-                        <meta charset="UTF-8">
-                        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                        <title>Document</title>
-                    </head>
-                    <body>
-                        
-                    </body>
-                    </html>
-					<p class="product-detail-description">
-						<%= product.description %>
-					</p>
+	<body>
+		<%- include('../partials/header') %>
+			<div class="container products-wrapper">
+				<div class="row">
+					<div class="col-12">
+						<h2 class="products-title">Detalle del producto: <%= product.name %>
+						</h2>
+					</div>
 				</div>
-				<div class="col-12 col-lg-4">
-					<article class="product-detail-info">
-						<h2 class="product-detail-title"><%= product.name %> <%= product.color %></h2>
-						
-							<p class="product-detail-price small">
-								<span>$<%= product.price %></span>
-								/
-								<b><%= product.discount %>% OFF</b>
-							</p>
-							<p class="product-detail-price">
-								$<%= (product.price * (100 - product.discount) / 100).toFixed(2) %>
-							</p>
+				<div class="product-detail">
+					<div class="row">
+						<div class="col-12 col-lg-8">
+							<img src="/images/products/<%=product.image %>" alt="product image"
+								class="product-detail-img">
+							<html lang="en">
 
-						<ul class="actions-list">
-							<li>
-								<i class="fas fa-credit-card"></i>
-								<p>Pagá en 12 cuotas sin interes</p>
-							</li>
-							<li>
-								<i class="fas fa-store"></i>
-								<p>Retiro gratis en locales del vendedor</p>
-							</li>
-						</ul>
-						<a href="#" class="buy-now-button">COMPRAR AHORA</a>
-						<% if(!locals.isLogged){%>
-						<hr>
-						<%} else {%>
-						<a href="/editProduct/<%= product.id %>" class="action-button edit">EDITAR PRODUCTO</a>
-						<form action="/productdetail/delete/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
-							<button type="submit" class="action-button delete">ELIMINAR</button>
-						</form>
-						<%}%>
-					</article>
+							<head>
+								<meta charset="UTF-8">
+								<meta http-equiv="X-UA-Compatible" content="IE=edge">
+								<meta name="viewport" content="width=device-width, initial-scale=1.0">
+								<title>Document</title>
+							</head>
+
+							<body>
+
+							</body>
+
+							</html>
+							<p class="product-detail-description">
+								<%= product.description %>
+							</p>
+						</div>
+						<div class="col-12 col-lg-4">
+							<article class="product-detail-info">
+								<h2 class="product-detail-title">
+									<%= product.name %>
+										<%= product.color %>
+								</h2>
+
+								<p class="product-detail-price small">
+									<span>$<%= product.price %></span>
+									/
+									<b>
+										<%= product.discount %>% OFF
+									</b>
+								</p>
+								<p class="product-detail-price">
+									$<%= (product.price * (100 - product.discount) / 100).toFixed(2) %>
+								</p>
+
+								<ul class="actions-list">
+									<li>
+										<i class="fas fa-credit-card"></i>
+										<p>Pagá en 12 cuotas sin interes</p>
+									</li>
+									<li>
+										<i class="fas fa-store"></i>
+										<p>Retiro gratis en locales del vendedor</p>
+									</li>
+								</ul>
+								<a href="#" class="buy-now-button">COMPRAR AHORA</a>
+								<% if(!locals.isLogged){%>
+									<hr>
+									<%} else {%>
+										<div class="buttonEditDelete">
+											
+											<form action="/productdetail/delete/<%= product.id %>?_method=DELETE"
+												method="POST" style="display: inline-flex">
+												<a href="/editProduct/<%= product.id %>" class="action-button edit">EDITAR
+													PRODUCTO</a>
+												<button type="submit" class="action-button delete">ELIMINAR</button>
+											</form>
+
+											<%}%>
+										</div>
+							</article>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-    <%- include('../partials/footer') %>
-</body>
-</html>
+			<%- include('../partials/footer') %>
+	</body>
+
+	</html>
