--- a/src/views/main/home.ejs
+++ b/src/views/main/home.ejs
@@ -4,23 +4,23 @@
         <%- include('../partials/header') %>
             <main>
                 <h2>Listado de productos</h2>
-                <% products.forEach((product) => { %>
+                <% for( let i = 0; i < product.length; i++ ){ %>
                     <div class="col-12 col-sm-6 col-lg-3">
                         <section class="product-box">
-                            <a href="/productdetail/<%= product.id %>">
+                            <a href="/productdetail/<%= product[i].id %>">
                                 <figure class="product-box_image">
-                                    <img src="/images/products/<%= product.image %>" alt="imagen de producto">
+                                    <img src="/images/products/<%= product[i].image %>" alt="imagen de producto">
                                 </figure>
                                 <div class="product-box_data">
-                                    <h3>$<%= product.price %></h3>
-                                    <span class="descuento"><%= product.discount %> % OFF</span>
-                                    <p><%= product.name%> <%= product.color %></p>
+                                    <h3>$<%= product[i].price %></h3>
+                                    <span class="descuento"><%= product[i].discount %> % OFF</span>
+                                    <p><%= product[i].name%> <%= product[i].color %></p>
                                     <i class="fas fa-truck"></i>
                                 </div>
                             </a>
                         </section>
                     </div>
-                    <% }) %>
+                    <% } %>
             </main>
             <%- include('../partials/footer') %>
     </body>
