--- a/src/views/users/adminUser.ejs
+++ b/src/views/users/adminUser.ejs
@@ -3,33 +3,33 @@
     <body>
         <%- include('../partials/header') %>
             <main>
-                <% users.forEach(users=> { %>
+                <% for( let i = 0; i < user.length; i++ ){ %>
                     <div class="container">
-                        <a href="/detail/<%= users.id %>">
+                        <a href="/detail/<%= user[i].id %>">
                             <div class="img-user">
-                                <img class="img-user" src="../images/user/<%= users.image %>">
+                                <img class="img-user" src="../images/user/<%= user[i].image %>">
                             </div>
                             <div class="container-information">
                                 <div class="id">
-                                    <%= users.id_user %>
+                                    <%= user[i].dni %>
                                 </div>
                                 <div class="name">
-                                    <%= users.first_name %>
+                                    <%= user[i].first_name %>
                                 </div>
                                 <div class="lastname">
-                                    <%= users.last_name %>
+                                    <%= user[i].last_name %>
                                 </div>
                                 <div class="phone">
-                                    <%= users.phone %>
+                                    <%= user[i].phone %>
                                 </div>
                                 <div class="email">
-                                    <%= users.email %>
+                                    <%= user[i].email %>
                                 </div>
                             </div>
                         </a>
                     </div>
 
-                    <% }); %>
+                    <% }; %>
                     <a href="/register" class="btn-link">CREAR NUEVO USUARIO</a>
             </main>
             <%- include('../partials/footer') %>
