Cambios es controlador de usuarios y vista para crud

--- a/src/views/users/cardUser.ejs
+++ b/src/views/users/cardUser.ejs
@@ -11,7 +11,7 @@
                         <img class="img-user" src="../images/user/<%= user.image %>"">
                     </div>
                     <div class="container-information">
-                        <div class="id"><%= user.id_user %></div>
+                        <div class="id"><%= user.dni %></div>
                         <div class="name"><%= user.first_name %></div>
                         <div class="lastname"><%= user.last_name %></div>
                         <div class="phone"><%= user.phone %></div>
