--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,7 +4,7 @@
         <%- include('../partials/header') %>
             <div class="overlay" id="overlay">
                 <div class="formularioRegistro" id="formularioRegistro">
-                    <form class="form-horizontal" method="post" action="/register" enctype="multipart/form-data">
+                    <form class="form-horizontal" method="POST" action="/register" enctype="multipart/form-data">
                         <h2>Completa tus datos</h2>
                         <div class="divNombreApellido">
                             <div class="nombre">
@@ -38,10 +38,10 @@
                             </div>
                             <div class="idUser">
                                 <label>Identificación:</label>
-                                <input type="number" id="id_user" name="id_user" class="input-control" value="<%= locals.oldData ? oldData.id_user : null %>">
+                                <input type="number" id="dni" name="dni" class="input-control" value="<%= locals.oldData ? oldData.dni : null %>">
                                 <div class="validator">
-                                    <% if (locals.errors && errors.id_user) { %>
-                                        <%= errors.id_user.msg %>
+                                    <% if (locals.errors && errors.dni) { %>
+                                        <%= errors.dni.msg %>
                                             <% }%>
                                 </div>
                             </div>
@@ -54,6 +54,19 @@
                                             <% }%>
                                 </div>
                             </div>
+                            
+                          <!---- %>  <div class="idUser" id="roles">
+                                <label>Rol:</label>
+                                <select name="Roles">
+                                    <option value=""></option>
+                                    <option value="#00ff00">Verde</option>
+                                    <option value="#0000ff">Azul</option>
+                                    <option value="#770077">Morado</option>
+                                    </select>
+                                <div class="validator">
+                                    
+                                </div>
+                            </div> -->
                         </div>
                         <div class="divCorreoContrasena">
                             <div class="correo">
