Se organizan rutas en vista headre.ejs

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,8 +16,8 @@
             <ul class="list">
                 
                     <% if(!locals.isLogged){%>
-                    <li><a href="register">Registrate<i class="fas fa-id-card"></i></a></li>
-                    <li><a href="login">Ingresa<i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="/register">Registrate<i class="fas fa-id-card"></i></a></li>
+                    <li><a href="/login">Ingresa<i class="fas fa-sign-in-alt"></i></a></li>
                 <%} else {%>
                    
                     <li><a href="/logout">logout<i class="fa-solid fa-right-from-bracket"></i></a></li>
